fix visual bug where the lower part of the viewport was cut off

--- a/frontend/src/components/Game/Game.module.css
+++ b/frontend/src/components/Game/Game.module.css
@@ -6,5 +6,5 @@
   align-items: center;
   font-family: var(--font-sans, sans-serif);
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
